Common/GA.MusicTheory.DSL/Parsers/VexTabParser.fs
namespace GA.MusicTheory.DSL.Parsers

open System
open FParsec
open GA.MusicTheory.DSL.Types.VexTabTypes

/// <summary>
/// Parser for VexTab notation using FParsec
/// Implements the VexTab.ebnf grammar
/// </summary>
module VexTabParser =

    // ============================================================================
    // BASIC PARSERS
    // ============================================================================

    /// Parse whitespace
    let ws = spaces

    /// Parse optional whitespace
    let ws1 = spaces1

    /// Parse a specific string with optional trailing whitespace
    let str s = pstring s .>> ws

    /// Parse a specific character with optional trailing whitespace
    let ch c = pchar c .>> ws

    /// Parse an integer
    let pint : Parser<int, unit> =
        pint32 .>> ws

    /// Parse a boolean
    let pbool : Parser<bool, unit> =
        choice [
            str "true" >>% true
            str "false" >>% false
        ]

    /// Parse an identifier
    let identifier : Parser<string, unit> =
        let isIdentifierFirstChar c = isLetter c
        let isIdentifierChar c = isLetter c || isDigit c || c = '-' || c = '_'
        many1Satisfy2L isIdentifierFirstChar isIdentifierChar "identifier" .>> ws

    /// Parse horizontal whitespace (spaces and tabs, but not newlines)
    let hws = skipManySatisfy (fun c -> c = ' ' || c = '\t')

    /// Parse a specific string with optional trailing horizontal whitespace (no newlines)
    let strNoNewline s = pstring s .>> hws

    /// Parse a specific character with optional trailing horizontal whitespace (no newlines)
    let chNoNewline c = pchar c .>> hws

    /// Parse a boolean without consuming any whitespace
    let pboolNoNewline : Parser<bool, unit> =
        choice [
            pstring "true" >>% true
            pstring "false" >>% false
        ]

    /// Parse an integer without consuming newlines
    let pintNoNewline : Parser<int, unit> =
        pint32 .>> hws

    /// Parse horizontal whitespace (at least one space/tab, no newlines)
    let hws1 = skipMany1 (pchar ' ' <|> pchar '\t')

    // ============================================================================
    // NOTE LETTER PARSERS
    // ============================================================================

    /// Parse a note letter (A-G)
    let noteLetter : Parser<NoteLetter, unit> =
        choice [
            ch 'A' >>% A
            ch 'B' >>% B
            ch 'C' >>% C
            ch 'D' >>% D
            ch 'E' >>% E
            ch 'F' >>% F
            ch 'G' >>% G
        ]

    /// Parse an accidental
    let accidental : Parser<VexAccidental, unit> =
        choice [
            str "##" >>% DoubleSharp
            str "bb" >>% DoubleFlat
            str "x" >>% DoubleSharp
            ch '#' >>% Sharp
            ch 'b' >>% Flat
            ch '♯' >>% Sharp
            ch '♭' >>% Flat
            ch 'n' >>% Natural
            ch '♮' >>% Natural
        ]

    /// Parse an optional accidental
    let optAccidental : Parser<VexAccidental option, unit> =
        opt accidental

    /// Parse an octave
    let octave : Parser<int, unit> =
        digit |>> (fun c -> int c - int '0') .>> ws

    // ============================================================================
    // FRET AND STRING PARSERS
    // ============================================================================

    /// Parse a fret (number or X for muted)
    let fret : Parser<Fret, unit> =
        choice [
            ch 'X' >>% Muted
            pint |>> FretNumber
        ]

    /// Parse a string number
    let stringNumber : Parser<int, unit> =
        digit |>> (fun c -> int c - int '0') .>> ws

    /// Parse a fret without consuming newlines
    let fretNoNewline : Parser<Fret, unit> =
        choice [
            pchar 'X' >>% Muted
            pintNoNewline |>> FretNumber
        ]

    /// Parse a string number without consuming newlines
    let stringNumberNoNewline : Parser<int, unit> =
        digit |>> (fun c -> int c - int '0')

    // ============================================================================
    // DURATION PARSERS
    // ============================================================================

    /// Parse a duration code
    let durationCode : Parser<DurationCode, unit> =
        choice [
            str "w" >>% Whole
            str "h" >>% Half
            str "q" >>% Quarter
            str "32" >>% ThirtySecond
            str "16" >>% Sixteenth
            str "8" >>% Eighth
        ]

    /// Parse a duration
    let duration : Parser<Duration, unit> =
        ch ':' >>. pipe3
            durationCode
            (opt (ch 'd'))
            (opt (ch 'S'))
            (fun code dotted slash ->
                {
                    Code = code
                    Dotted = Option.isSome dotted
                    SlashNotation = Option.isSome slash
                })

    /// Parse optional duration
    let optDuration : Parser<Duration option, unit> =
        opt duration

    // ============================================================================
    // TECHNIQUE PARSERS
    // ============================================================================

    /// Parse a hammer-on
    let hammerOn : Parser<Technique, unit> =
        ch 'h' >>. pint |>> HammerOn

    /// Parse a pull-off
    let pullOff : Parser<Technique, unit> =
        ch 'p' >>. pint |>> PullOff

    /// Parse a slide
    let slide : Parser<Technique, unit> =
        ch 's' >>. pint |>> Slide

    /// Parse a bend
    let bend : Parser<Technique, unit> =
        ch 'b' >>. pipe2
            pint
            (opt (ch 'b' >>. pint))
            (fun toFret release -> Bend (toFret, release))

    /// Parse vibrato
    let vibrato : Parser<Technique, unit> =
        choice [
            ch 'V' >>% Vibrato true   // harsh
            ch 'v' >>% Vibrato false  // normal
        ]

    /// Parse tap
    let tap : Parser<Technique, unit> =
        ch 't' >>% Tap

    /// Parse stroke
    let stroke : Parser<Technique, unit> =
        choice [
            ch 'u' >>% Upstroke
            ch 'd' >>% Downstroke
        ]

    /// Parse a single technique
    let technique : Parser<Technique, unit> =
        choice [
            attempt hammerOn
            attempt pullOff
            attempt slide
            attempt bend
            vibrato
            tap
            stroke
        ]

    /// Parse a chain of techniques
    let techniqueChain : Parser<Technique list, unit> =
        many technique

    // ============================================================================
    // ARTICULATION PARSERS
    // ============================================================================

    /// Parse articulation type
    let articulationType : Parser<ArticulationType, unit> =
        choice [
            str "a@a" >>% UpFermata
            str "a@u" >>% DownFermata
            str "av" >>% Staccatissimo
            str "a." >>% Staccato
            str "a>" >>% Accent
            str "a-" >>% Tenuto
            str "a^" >>% Marcato
            str "a+" >>% LeftHandPizzicato
            str "ao" >>% SnapPizzicato
            str "ah" >>% OpenNote
            str "a|" >>% BowUp
            str "am" >>% BowDown
        ]

    /// Parse articulation position
    let articulationPosition : Parser<ArticulationPosition, unit> =
        choice [
            str "top" >>% Top
            str "bottom" >>% Bottom
        ]

    /// Parse articulation
    let articulation : Parser<Articulation, unit> =
        between (str "$") (str ".$")
            (pipe2
                articulationType
                (ch '/' >>. articulationPosition)
                (fun artType pos -> { Type = artType; Position = pos }))

    /// Parse optional articulation
    let optArticulation : Parser<Articulation option, unit> =
        opt articulation

    // ============================================================================
    // NOTE PARSERS
    // ============================================================================

    /// Parse a standard notation note
    let standardNote : Parser<StandardNote, unit> =
        pipe5
            noteLetter
            optAccidental
            (ch '/' >>. octave)
            techniqueChain
            optArticulation
            (fun letter acc oct techs art ->
                {
                    Letter = letter
                    Accidental = acc
                    Octave = oct
                    Techniques = techs
                    Articulation = art
                })
